# mangatoo

./: .replit  CLOUDINARY_INTEGRATION_GUIDE.md  DEPLOY.md  Dockerfile  FILES_CHANGED.md  UPDATE_GUIDE.md  add_footer_settings.py  app.py  auto_scraper.py  background_uploader.py  business_plan.md  create_sample_data.py  database_init.py  dependencies.txt  deploy_to_vps.sh  deployment_config.json  deployment_guide.html  dynamic_url_test.py  final_analysis.txt  fix_tablenames.py  gunicorn.conf.py  main.py  manga_platform.db  manga_platform_backup_20250905_225003.db  models.py  models_backup.py  models_cloudinary.py  old_zip_function.txt  performance_optimizations.py  populate_database.py  project_analysis_report.json  project_analyzer.py  pyproject.toml  repair_missing_pages.py  replit.md  requirements.txt  routes.py  routes_backup.py  run_local.py  security_config.py  (+15 more)
app/: __init__.py  app.py  google_auth.py  models.py  utils.py  utils_bravo_mail.py  utils_cloudinary.py  utils_cloudinary_old.py  utils_dynamic_urls.py  utils_seo.py  utils_settings.py
attached_assets/: Pasted--2025-08-13-11-57-11-0000-27-INFO-Booting-worker-with-pid-27-Aug-13-14-57-12-INFO-root--1755087141651_1755087141655.txt  Pasted--443-DEBUG-urllib3-connectionpool-https-olympustaff-com-443-GET-uploads-manga-98f13-1293-5e5f65-1754838958294_1754838958297.txt  Pasted--None-Cloudinary-1-0-15-Cloudinary-INFO-root--1754944408233_1754944408236.txt  (+22 more)
backups/backup_20250810_212322/: app.py  manga_platform.db  models.py  pyproject.toml  replit.md  routes.py  utils.py  utils_settings.py
config/: auto_setup.py  (+3 more)
(+130 files in other folders)
